# gridr

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  dist_extra_config.cfg  pyproject.toml  requirements_dev.txt  sonar-project.properties
.github/workflows/: release-python.yml
benchmark/chain/fft_filtering_chain/: astridz_convolution.py  benchmark001.py
benchmarks/notebooks/: benchmark_scipy.ipynb  benchmark_version.ipynb
benchmarks/results/pytest/Linux-CPython-3.11-64bit/: 0001_v0.5.2_trex083.sis.cnes.fr.json  0002_v0.6.0.dev0_trex009.sis.cnes.fr.json
benchmarks/scripts/: bench.py  parse_results.py
benchmarks/wrappers/: grid_orion.py
doc/examples/: example_grid_mask_chain_masked_tif.py  example_grid_resampling.py
docs/source/: conf.py  environment_variables.rst  generate_api_python.py  index.rst  installation.rst  license.rst  nbconvert_config.py  notebooks_list.json  readme.txt  references.bib  references.rst  standards.rst
docs/source/CLA/: CCLA-GRIDR.doc  ICLA-GRIDR.doc
docs/source/_notebooks/: core_masking_index.rst  grid_resampling_chain_index.rst  grid_resampling_index.rst  index.md  index.rst
docs/source/_static/css/: style.css
docs/source/api_python/: modules.rst
docs/source/api_python/chain/: fft_filtering_chain.rst  grid_mask_chain.rst  grid_resampling_chain.rst  index.rst
docs/source/api_python/core/: index.rst
docs/source/api_python/core/convolution/: fft_filtering.rst  index.rst
docs/source/api_python/core/filter/: filter.rst  frequential_interp_2d.rst  index.rst  lattice.rst
docs/source/api_python/core/grid/: grid_antialiasing.rst  grid_commons.rst  grid_mask.rst  grid_rasterize.rst  grid_resampling.rst  grid_utils.rst  index.rst
docs/source/api_python/core/interp/: index.rst  (+2 more)
docs/source/api_python/io/: common.rst  index.rst  tile.rst
docs/source/api_python/misc/: index.rst  mandrill.rst
docs/source/api_python/scaling/: index.rst  shared_array.rst  shmutils.rst
docs/source/developer_guide/: contributing_to_gridr.rst  index.rst
docs/source/release_notes/: index.rst  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md
docs/source/theoretical_foundations/: image_geometry.rst  resampling.rst
notebooks/: chain_notebook_utils.py  core_masking_001_conventions.ipynb  core_masking_002_rasterize.ipynb  core_masking_003_build_mask_geometries.ipynb  core_masking_004_build_mask_raster.ipynb  core_masking_005_combined.ipynb  grid_masking_001.ipynb  grid_resampling_001.ipynb  grid_resampling_001_getting_started.ipynb  grid_resampling_001_work.ipynb  grid_resampling_002_geometric_transformations.ipynb  grid_resampling_003_output_control.ipynb  grid_resampling_004_masking.ipynb  grid_resampling_005_bspline_masking.ipynb  grid_resampling_006_boundary_conditions.ipynb  grid_resampling_007_standalone_mode.ipynb  grid_resampling_008_pipeline_mode.ipynb  grid_resampling_chain_000_overview.ipynb  grid_resampling_chain_001.ipynb  grid_resampling_chain_001_getting_started.ipynb  grid_resampling_chain_002_output_mask.ipynb  grid_resampling_chain_003_grid_mask.ipynb  grid_resampling_chain_004_source_mask.ipynb  grid_resampling_chain_005_geometry_masks.ipynb  grid_resampling_chain_006_shift_and_window.ipynb  grid_resampling_chain_007_io_memory.ipynb  grid_resampling_core_standalone.ipynb  grid_resampling_plot_utils.py  notebook_utils.py
python/gridr/cdylib/: __init__.py
python/gridr/chain/: fft_filtering_chain.py  grid_mask_chain.py  grid_resampling_chain.py
python/gridr/core/convolution/: fft_filtering.py
python/gridr/core/filter/: filter.py  frequential_interp_2d.py  lattice.py
python/gridr/core/grid/: grid_antialiasing.py  grid_commons.py  grid_mask.py  grid_rasterize.py  grid_resampling.py  grid_utils.py
python/gridr/core/interp/: bspline_prefiltering.py
python/gridr/core/utils/: array_pad.py  array_utils.py  array_window.py  chunks.py  fft.py  parameters.py
python/gridr/io/: common.py  tile.py
python/gridr/misc/: lena.py  mandrill.py
python/gridr/scaling/: shared_array.py  shmutils.py
rust/gridr/: Cargo.toml  NOTICE  about.toml  template-rust.hbs
rust/gridr/src/: lib.rs
rust/gridr/src/core/: array_utils.rs  gx_array.rs  gx_array_utils.rs  gx_const.rs  gx_errors.rs  gx_grid.rs  gx_grid_geometry.rs  gx_grid_resampling.rs  gx_macros.rs  gx_utils.rs  mod.rs
rust/gridr/src/core/interp/: gx_array_view_interp.rs  gx_array_view_interp_test.rs  gx_bspline_kernel.rs  gx_bspline_prefiltering.rs  gx_interp.rs  gx_linear_kernel.rs  gx_nearest_kernel.rs  gx_optimized_bicubic_kernel.rs  mod.rs
rust/gridr/src/pyapi/: mod.rs  py_array.rs  py_array_utils.rs  py_bindings.rs  py_grid_geometry.rs  py_grid_resampling.rs
rust/gridr/src/pyapi/interp/: py_bspline_kernel.rs  py_bspline_prefiltering.rs
sandbox/: fft_convol.py  grid_convention.ipynb  notebook_tools.py  rasterize.ipynb
scripts/: generate_notice.py  generate_rust_notice.sh  reflow_md.py
templates/: NOTICE.template  NOTICE_python_3rdparty.template  NOTICE_rust_3rdparty.hbs
tests/python/: conftest.py
tests/python/benchmarks/: conftest.py
tests/python/benchmarks/time/: test_time_chain_array_grid_resampling.py  test_time_core_array_grid_resampling.py
tests/python/gridr/chain/: test_grid_mask_chain.py  test_grid_resampling_chain.py
tests/python/gridr/io/: test_tile.py
tests/python/gridr/scaling/: test_shared_array.py
tests/python/regression/: conftest.py
tests_data/: generate.py
(+20 files in other folders)
