# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "gridr"
version = "0.2.0"
description = "Geometric and Radiometric Image Data Resampling"
authors = [ {name="Arnaud Kelbert", email="arnaud.kelbert@cnes.fr"} ]
readme = "README.md"
#license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries", 
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "numpy>=2.2",
  "scipy>=1.10.1",
  "rasterio>=1.3.11",
]


[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python"] }

# Uncomment when rust will be used
[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "gridr.cdylib._libgridr"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
#                             # but you can add a prefix to nest it inside of a Python package.
path = "rust/gridr/Cargo.toml"      # Default value, can be omitted
binding = "PyO3"         # Default value, can be omitted
