# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "gridr"
version = "0.4.1"
description = "Geometric and Radiometric Image Data Resampling"
authors = [ {name="CNES", email="gridr-cnes@cnes.fr"} ]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",    
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries", 
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.25",
  "scipy>=1.10.1",
  "rasterio>=1.3.11",
]


[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
# The last part of the target name (i.e. "_libgridr") has to match lib.name in Cargo.toml
target = "gridr.cdylib._libgridr"
path = "rust/gridr/Cargo.toml"
binding = "PyO3"
